
Slick 7.x-3.0-dev, 2019-04-27
-----------------------------
- Updated docs.
- Updated Ajaxin integration.
- Fixed for colorbox regression with indices due to the previous slick.colorbox
  library weight change.

Slick 7.x-3.0-dev, 2019-04-22
-----------------------------
- Issue #3045487 by calbasi: Error: Class '\''Drupal\slick\SlickManager'\'' not
  found in slick().

Slick 7.x-3.0-dev, 2019-04-01
-----------------------------
- Fixes for slidesToShow > 1, centerMode, clones with Blazy IO.

Slick 7.x-3.0-dev, 2019-03-30
-----------------------------
- Updated to the latest Blazy 03/30.
- Removed Drupal.blazy.init.revalidate() for Drupal.blazy.init.load() as being
  too expensive, also for IO compatibility.

Slick 7.x-3.0-dev, 2019-03-23
-----------------------------
- Added caption_attributes for easy preprocess overrides.
- Micro optimizations.
- Fixed for docs.

Slick 7.x-3.0-dev, 2019-03-18
-----------------------------
- Fixed for typos, and cleaned up TODOs.

Slick 7.x-3.0-dev, 2019-03-17
-----------------------------
- Updated to the latest Blazy 2019-03-17 to reduce dups.

Slick 7.x-3.0-dev, 2019-03-15
-----------------------------
- Added Slick::loadWithFallback(), and minor fixes.

Slick 7.x-3.0-dev, 2019-03-12
-----------------------------
- Added back deprecated functions to anticipate potential issues.
- Added isset check to Slick::getOptions().

Slick 7.x-3.0-beta1, 2019-03-07
-------------------------------
- Made Slick and Slick UI extensible.

Slick 7.x-3.0-dev, 2019-03-06
-----------------------------
- Renamed getOptionsetOptions() to getOptionsetByGroupOptions().
- Updated to the latest Blazy change 03-06 with BlazyAdminBase::openingForm().
- Added hook_slick_build_alter() to modify the entire slick outputs.

Slick 7.x-3.0-dev, 2019-03-02
-----------------------------
- Added proper check for captions for edge case settings hold old references
  to fields while they can be deleted anytime.

Slick 7.x-3.0-dev, 2019-02-16