@@ -106,8 +106,8 @@ class Slick extends SlickBase implements SlickInterface {
         'pauseOnHover'     => TRUE,
         'pauseOnDotsHover' => FALSE,
         'arrows'           => TRUE,
-        'prevArrow'        => '<button type="button" data-role="none" class="slick-prev" aria-label="Previous" tabindex="0">Previous</button>',
-        'nextArrow'        => '<button type="button" data-role="none" class="slick-next" aria-label="Next" tabindex="0">Next</button>',
+        'prevArrow'        => 'Previous',
+        'nextArrow'        => 'Next',
         'downArrow'        => FALSE,
         'downArrowTarget'  => '',
         'downArrowOffset'  => 0,
